Fix spacing

--- a/app/components/onboarding/disclaimer/agree-to-terms-menu/agree-to-terms-menu.scss
+++ b/app/components/onboarding/disclaimer/agree-to-terms-menu/agree-to-terms-menu.scss
@@ -9,7 +9,7 @@
   .cta-buttons {
     @extend %cta-buttons;
     position: relative;
-    padding-top: 20px;
+    padding-top: 70px;
   }
 
   .checkbox input:before,
